--- a/data/css/style-Leria.css
+++ b/data/css/style-Leria.css
@@ -159,7 +159,7 @@ th:nth-child(3) {
     color: #F4B6C2;
     font-family: 'Poppins', sans-serif;
     text-transform: uppercase;
-    margin-bottom: 0;
+    margin-bottom: 1vh;
 }
 
 .subtitre {
@@ -184,7 +184,7 @@ th:nth-child(3) {
 .text-corp b {
     text-transform: uppercase;
     font-size: 1.5vw;
-    line-height: 3.5vw;
+    line-height: 3vw;
     font-weight: 500;
 }
 
