--- a/data/css/style-L'ACOSTE.css
+++ b/data/css/style-L'ACOSTE.css
@@ -49,7 +49,7 @@ body {
 
 .header_subtitle {
     font-family: 'Poppins', sans-serif;
-    font-size: 5vh;
+    font-size: 4.8vh;
     font-weight: 400;
     letter-spacing: -0.5px;
     text-align: left;
@@ -63,7 +63,7 @@ body {
 }
 
 .header-h1 {
-    font-size: 10vh;
+    font-size: 9.6vh;
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
     padding: 0;
@@ -77,6 +77,7 @@ body {
 
 .hero-btn_behance {
     background-color: #2D3435;
+    border: none;
     color: #fff;
     width: 30vh;
     height: 4.6vh;
@@ -107,10 +108,10 @@ body {
 }
 
 .t1 td {
-    font-size: 1.2vw;
+    font-size: 1.1vw;
     font-family: 'Poppins', sans-serif;
     vertical-align: top;
-    line-height: 3.6vh;
+    line-height: 3.2vh;
     font-weight: 300;
     padding: 2vh 4vw 0vh 4vw;
 }
