--- a/data/css/style-bouygues_telecom.css
+++ b/data/css/style-bouygues_telecom.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 /*Reset CSS presets et smooth scroll*/
 * {
     margin: 0;
@@ -14,17 +16,17 @@ body {
 /*Header*/
 .header-background {
     background-color: #FFFAEF;
-    height: 100vh;
+    height: 84vh;
 }
 
 .header {
-    padding-left: 5vw;
+    padding-left: 4vw;
+    margin-top: 3vh;
 }
 
 .box-top-header {
     display: flex;
-    height: 4vh;
-    padding: 0;
+    align-items: center;
 }
 
 .le {
@@ -34,14 +36,13 @@ body {
     font-size: 3.5vh;
     letter-spacing: -0.5px;
     text-align: left;
-    margin-top: 1.2vh;
     height: 4.6vh;
 }
 
 .p2-header {
     font-family: 'Poppins', sans-serif;
-    font-size: 5vh;
-    font-weight: 100;
+    font-size: 4.8vh;
+    font-weight: 400;
     letter-spacing: -0.5px;
     text-align: left;
     margin: 0;
@@ -49,36 +50,55 @@ body {
 }
 
 .box-header-bot {
-    padding-top: 2vh;
     display: flex;
 }
 
 .header-h1 {
-    font-size: 10vh;
+    font-size: 9.6vh;
     font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    padding: 0;
+    margin: 0;
+}
+
+.hero-btn_behance {
+    background-color: #2D3435;
+    border: none;
+    color: #fff;
+    width: 30vh;
+    height: 4.6vh;
+    text-align: center;
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    font-weight: 300;
+    font-size: 2.5vh;
+    line-height: 4vh;
+    border-radius: 0.8vh;
+    transition: background-color 0.3s, color 0.3s;
+    margin-top: 3vh;
 }
 
 /*Tableau en bas du header*/
 .t1 {
     width: 100%;
     margin: 0 auto;
-    margin-top: 28vh;
+    margin-top: 6vh;
+    border-collapse: collapse;
 }
 
 .t1 th {
     font-size: 1.5vw;
     font-family: 'Poppins', sans-serif;
-    font-weight: 400;
+    font-weight: 600;
     padding: 0vh 4vw 2vh 4vw;
     text-align: left;
 }
 
 .t1 td {
-    font-size: 1.2vw;
+    font-size: 1.1vw;
     font-family: 'Poppins', sans-serif;
     vertical-align: top;
-    line-height: 3.6vh;
-    font-weight: 100;
+    line-height: 3.2vh;
+    font-weight: 300;
     padding: 2vh 4vw 0vh 4vw;
 }
 
@@ -88,12 +108,24 @@ body {
 
 .title-table2 {
     width: 32.5vw;
+    border-left: 1px solid #DDD;
+    border-right: 1px solid #DDD;
 }
 
 .title-table3 {
     width: 15vw;
 }
 
+.title-table1,
+.title-table2,
+.title-table3 {
+    text-transform: uppercase;
+}
+
+.td-mid {
+    border-left: 1px solid #DDD;
+    border-right: 1px solid #DDD;
+}
 
 td:nth-child(3) {
     text-align: left;
@@ -136,7 +168,7 @@ th:nth-child(3) {
 
 .titre_rose {
     font-size: 3.5vw;
-    font-weight: 100;
+    font-weight: 500;
     line-height: 5vw;
     margin: 0;
     margin-left: 10px;
@@ -150,7 +182,7 @@ th:nth-child(3) {
 .text-corp {
     font-family: 'Poppins', sans-serif;
     font-size: 1.06vw;
-    font-weight: 100;
+    font-weight: 400;
     color: #2D3435;
     text-align: left;
     line-height: 1.7vw;
