--- a/data/css/style-GFA.css
+++ b/data/css/style-GFA.css
@@ -1,27 +1,37 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+/*Reset CSS presets et smooth scroll*/
 * {
     margin: 0;
-    padding: 0;
+    font-weight: 400;
 }
 
 html {
     scroll-behavior: smooth;
 }
 
+body {
+    margin: 0;
+}
 
+/*Header*/
 .header-background {
     background-color: #FFFAEF;
-    height: 100vh;
+    padding-bottom: 3vh;
 }
 
 .header {
-    display: block;
+    padding-left: 4vw;
+    margin-top: 3vh;
+}
+
+.flex {
+    display: flex;
     align-items: center;
-    padding-left: 5vw;
 }
 
 .box-top-header {
     display: flex;
-    padding-top: 20vh;
     height: 4vh;
     padding: 0;
 }
@@ -33,113 +43,201 @@ html {
     font-size: 3.5vh;
     letter-spacing: -0.5px;
     text-align: left;
-    margin-top: 1vh;
-    height: 5vh;
+    margin-top: 1.2vh;
+    height: 4.6vh;
 }
 
-.create_logo {
+.header_subtitle {
     font-family: 'Poppins', sans-serif;
-    font-size: 5vh;
-    font-weight: lighter;
+    font-size: 4.8vh;
+    font-weight: 400;
     letter-spacing: -0.5px;
     text-align: left;
     margin: 0;
     padding: 0;
-}    
+}
 
 .box-header-bot {
     padding-top: 2vh;
     display: flex;
 }
 
-.GFA_Funding {
-    font-size: 10vh;
+.header-h1 {
+    font-size: 9.6vh;
     font-family: 'Poppins', sans-serif;
-}    
+    font-weight: 500;
+    padding: 0;
+    margin: 0;
+}
 
+.embleme-header {
+    height: 18vh;
+    margin-left: 5vw;
+}
 
+.hero-btn_behance {
+    background-color: #2D3435;
+    border: none;
+    color: #fff;
+    width: 30vh;
+    height: 4.6vh;
+    text-align: center;
+    font-family: Poppins, Arial, Helvetica, sans-serif;
+    font-weight: 300;
+    font-size: 2.5vh;
+    line-height: 4vh;
+    border-radius: 0.8vh;
+    transition: background-color 0.3s, color 0.3s;
+    margin-top: 3vh;
+}
 
-/* Tableau */
+/*Tableau en bas du header*/
 .t1 {
-    width: 90%;
+    width: 100%;
     margin: 0 auto;
-    border-spacing: 3vh;
-    margin-top: 10vh;
+    margin-top: 6vh;
+    border-collapse: collapse;
 }
 
 .t1 th {
-    width: 30vw;
-    font-size: 2vw;
-    text-align: left;
+    font-size: 1.5vw;
     font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    padding: 0vh 4vw 2vh 4vw;
+    text-align: left;
 }
 
 .t1 td {
-    font-size: 1.5vw;
+    font-size: 1.1vw;
     font-family: 'Poppins', sans-serif;
-    text-align: left;
     vertical-align: top;
-    line-height: 2vw;
+    line-height: 3.2vh;
+    font-weight: 300;
+    padding: 2vh 4vw 0vh 4vw;
+}
+
+.title-table1 {
+    width: 42.5vw;
+}
+
+.title-table2 {
+    width: 32.5vw;
+    border-left: 1px solid #DDD;
+    border-right: 1px solid #DDD;
+}
+
+.title-table3 {
+    width: 15vw;
+}
+
+.title-table1,
+.title-table2,
+.title-table3 {
+    text-transform: uppercase;
+}
+
+.td-mid {
+    border-left: 1px solid #DDD;
+    border-right: 1px solid #DDD;
 }
 
 td:nth-child(3) {
-    text-align: center;
+    text-align: left;
 }
 
 th:nth-child(3) {
-    text-align: center;
-  }
-
-  .black{
-    background-color: #2D3435;
-    padding-bottom: 60px;
-}
-
-.box-h2projet {
-    height: 10vh;
-    width: 25%;
-    display: flex;
-    padding: 0;
-    margin-left: 5vw;
-    padding-top: 5vw;
-}
-
-.box-le {
-    border-bottom: 5px solid #F4B6C2;
-    margin-top: 0.5vw;
-    height: 4vw;
-}
-
-.txt-le {
-    font-size: 3vw;
-    margin: 0;
-    padding: 0;
-    color: #F4B6C2;
-    font-family: 'Poppins', sans-serif;
-}
-.projet {
-    font-size: 3.5vw;
-    margin: 0;
-    margin-left: 10px;
-    padding: 0;
-    color: #F4B6C2;
-    font-family: 'Poppins', sans-serif;
-}
-
-
-.comprendre_GFA{
-    font-family: 'Poppins', sans-serif;
-    font-size: 2vh;
-    color: white;
     text-align: left;
-    margin-top: 2vh;
-    padding-left: 5vw;
-    padding-right: 5vw;
 }
 
-.img_feuille{
-    padding-top: 60px;
-    display: block;
+.background-white {
+    background-color: #ffffff;
+    margin: 0;
+    padding-left: 16vw;
+    padding-right: 16vw;
+}
+
+/*Bannières et autres images faisant 100% de la largeur de leur emplacement*/
+.banniere {
+    width: 100%;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
+/*Titre projet et autres titre de même style*/
+.box-h2 {
+    margin-top: 1vw;
+}
+
+.titre_rose,
+.subtitre {
+    font-size: 2.5vw;
+    font-weight: 500;
+    line-height: 2.5vw;
+    margin-top: 6vh;
+    padding: 0;
+    color: #F4B6C2;
+    font-family: 'Poppins', sans-serif;
+    text-transform: uppercase;
+    margin-bottom: 2vh;
+}
+
+.subtitre {
+    font-size: 2vw;
+    text-transform: none;
+    margin-bottom: 4vh;
+    color: #2D3435;
+}
+
+/*Style du texte de corp*/
+.text-corp {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.2vw;
+    font-weight: 400;
+    color: #2D3435;
+    text-align: left;
+    margin-top: 1vh;
+    line-height: 1.7vw;
+    padding-bottom: 3vw;
+}
+
+.text-corp>b {
+    font-weight: 700;
+}
+
+.vingt {
+    width: 20%;
     margin: auto;
+    padding: 5vh 0 8vh 0;
+}
+
+.flex-circle {
+    display: flex;
+    justify-content: space-around;
+    padding-left: 15vw;
+    padding-right: 15vw;
+}
+
+.circle1,
+.circle2,
+.circle3 {
+    width: 5vw;
+    height: 5vw;
+    border-radius: 500px;
+}
+
+.circle1 {
+    background-color: #2D5C95;
+}
+
+.circle2 {
+    background-color: #1B203D;
+}
+
+.circle3 {
+    background-color: #1D1E1C;
+}
+
+.cinquante {
     width: 50%;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    margin: auto;
 }
