--- a/data/css/style-L'ACOSTE.css
+++ b/data/css/style-L'ACOSTE.css
@@ -17,7 +17,7 @@ body {
 /*Header*/
 .header-background {
     background-color: #FFFAEF;
-    height: 72vh;
+    padding-bottom: 3vh;
 }
 
 .header {
