--- a/data/css/footer.css
+++ b/data/css/footer.css
@@ -1,7 +1,7 @@
 /*Footer*/
 footer {
     text-align: center;
-    height: 25vh;
+    height: 13vw;
     background: #2D3435;
     margin-top: 2vw;
 }
@@ -26,7 +26,7 @@ footer {
     height: 2vw;
     border: transparent;
     border: solid 0.2vw #F4B6C2;
-    margin-top: 1.6vh;
+    margin-top: 1vw;
     font-family: Poppins, Arial, Helvetica, sans-serif;
 }
 
