--- a/data/css/footer.css
+++ b/data/css/footer.css
@@ -3,7 +3,7 @@ footer {
     text-align: center;
     height: 13vw;
     background: #2D3435;
-    margin-top: 2vw;
+    margin-top: 2vh;
 }
 
 .btn-cv-footer {
