--- a/data/css/style-index.css
+++ b/data/css/style-index.css
@@ -80,6 +80,7 @@ html{
     cursor: pointer;
 }
 
+/*header*/
 .container-header {
     width: 50vw;
     margin: 0 auto;
@@ -102,7 +103,6 @@ html{
     height: 20vw;
 }
 
-/*header*/
 .header-column-left {
     flex: 1;
     display: flex;
@@ -160,7 +160,9 @@ html{
 
 .button-container {
     margin-top: 1vw;
-    width: 40vw;
+    display: flex;
+    justify-content: space-between;
+    width: 30vw;
 }
 
 .button-container button {
@@ -180,10 +182,6 @@ html{
     border: solid 0.2vw #F4B6C2;
     cursor: default;
     font-family: Poppins, Arial, Helvetica, sans-serif;
-}
-
-.btn-2-acc {
-    margin-left: 1.5vw;
 }
 
 .f-project {
