--- a/m/css/style-qui_suis-je.css
+++ b/m/css/style-qui_suis-je.css
@@ -2,11 +2,12 @@ body {
     margin: 0;
     padding: 0;
     font-family: Poppins, Arial, Helvetica, sans-serif;
+    background-color: #FFFAEF;
 }
 
 .fjaune {
     background-color: #FFFAEF;
-    height: 100vh;
+    height: 95vh;
 }
 
 .container-header {
@@ -75,12 +76,12 @@ body {
     outline: none;
     cursor: pointer;
     font-size: 1.6vh;
-    font-weight: 400;
+    font-weight: 500;
     text-align: center;
     white-space: normal;
     color: #fff;
     background-color: #F4B6C2;
-    border-radius: 500px;
+    border-radius: 2vw;
     padding: 0.8vh 1vh 0.8vh 1vh;
     border: transparent;
     transition-property: background-color, border-color, color, box-shadow, filter;
