--- a/m/css/style-index.css
+++ b/m/css/style-index.css
@@ -176,7 +176,7 @@ html{
 }
 
 .container-projects-cards > span {
-    background-color: #DDD;
+    background-color: #F5F5F5;
     width: 90vw;
     height: 2px;
     margin: 0 auto;
