--- a/m/css/nav.css
+++ b/m/css/nav.css
@@ -61,7 +61,7 @@ body {
   position: absolute;
   display: block;
   height: 25px;
-  width: 32px;
+  width: 12vw;
   top: 1rem;
   right: 1rem;
   z-index: 5;
@@ -75,33 +75,16 @@ body {
   width: 32px;
   position: absolute;
   top: 1rem;
-  right: 1rem;
+  right: 2rem;
   z-index: 4;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 
-.nav-container .hamburger-lines .line {
-  display: block;
-  height: 4px;
-  width: 100%;
-  border-radius: 10px;
-  background: #0e2431;
-}
-
-.nav-container .hamburger-lines .line1 {
-  transform-origin: 0% 0%;
-  transition: transform 0.4s ease-in-out;
-}
-
-.nav-container .hamburger-lines .line2 {
-  transition: transform 0.2s ease-in-out;
-}
-
-.nav-container .hamburger-lines .line3 {
-  transform-origin: 0% 100%;
-  transition: transform 0.4s ease-in-out;
+.menu-txt {
+  font-size: 4vw;
+  width: 12vw;
 }
 
 .navbar .menu-items {
