--- a/m/css/nav.css
+++ b/m/css/nav.css
@@ -60,7 +60,7 @@ body {
 .nav-container .checkbox {
   position: absolute;
   display: block;
-  height: 25px;
+  height: 7vw;
   width: 12vw;
   top: 1rem;
   right: 1rem;
