--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@
 
 
 *{
-    margin : 0;
-    padding: 0;
+
     font-family: Inter, Arial, Sans-Serif;
 }
 
@@ -37,6 +36,12 @@ body{
 .h1_nom{
     font-weight: 400;
     color: #434343;
+    font-size: 40px;
+}
+
+.h2_nom {
+    font-size: 40px;
+    font-weight: 300px;
 }
 
 .h2_web_design{
