--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 83vh;
+    height: 80vh;
     justify-content: center;
 }
 
@@ -69,13 +69,16 @@ body{
     color: black;
     font-weight: 500;
     margin-top: 23px;
-
+    line-height: 25px;
+    cursor: pointer;
 }
 
 .card h2 {
     font-size: 20px;
     font-weight: 800;
 }
+
+
 @media (max-width: 768px){
     
     .img_PP {
@@ -95,7 +98,7 @@ body{
     }
     
     .div_centre {
-        height: 65vh;
+        height: 40vh;
     }
     
     .card {
@@ -105,12 +108,15 @@ body{
     .a_card {
         display: flex;
         flex-direction: column;
-        line-height: 55px;
+        line-height: 28px;
         font-size: 20px;
     }
     
     .card h2{
-        font-size: 35px;
+        font-size: 28px;
     }
     
+    .a_card a {
+        font-size: 16px;
+    }
 }
